# flam-assignment

./: .gitignore  README.md  hello.py  pyproject.toml  visualise.py
.github/workflows/: lint.yml
src/: math_utils.py  optimiser.py
tests/: test_pipeline.py
